// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageInput /> should render a link if there is a new image 1`] = `
<CustomDropZone
  onDrop={[Function]}
  style={Object {}}
>
  <a
    href="http://jsutATestImage.png"
    target="blank"
  >
    Test
  </a>
</CustomDropZone>
`;

exports[`<ImageInput /> should render text for adding a new image if there was a previous image 1`] = `
<CustomDropZone
  onDrop={[Function]}
  style={Object {}}
>
  <p>
    Drop a new image or click to select a new image to upload[.jpeg only]
  </p>
</CustomDropZone>
`;

exports[`<ImageInput /> should render text for adding an image if there was neither previous or new image 1`] = `
<CustomDropZone>
  <p>
    Drop an image or click to select an image to upload[.jpeg only]
  </p>
</CustomDropZone>
`;
